yaml/istio/timeout/timeout-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /productreviewms
    route:
    - destination:
        host: productreviewservice.shoppingportal.svc.cluster.local
        port:
          number: 80
    #timeout: 10s
    retries:
      attempts: 5
      perTryTimeout: 5s
